# spectroscopy-qml-xkye-verdiant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmark/cnn/: run_cnn.sh
benchmark/cnn/results/: summary.txt
benchmark/cnn/scripts/: evaluate_results.py  run_cnn_jung_baseline.py
benchmark/transformer/: run_transformer.sh
benchmark/transformer/scripts/: analyse_results.py  generate_input.py  start_training.py  transformer_template.yaml
benchmark/xgb/: run_xgboost.sh
benchmark/xgb/results/: summary.txt
benchmark/xgb/scripts/: evaluate_results.py  run_xgb_baseline.py
data/meta_data/: meta_data_dict.json  spectrum_dimensions.json
data/raw/: aligned_chunk_0.parquet  aligned_chunk_1.parquet  aligned_chunk_10.parquet  aligned_chunk_100.parquet  aligned_chunk_101.parquet  aligned_chunk_102.parquet  aligned_chunk_103.parquet  aligned_chunk_104.parquet  aligned_chunk_105.parquet  aligned_chunk_106.parquet  aligned_chunk_107.parquet  aligned_chunk_108.parquet  aligned_chunk_109.parquet  aligned_chunk_11.parquet  aligned_chunk_110.parquet  aligned_chunk_111.parquet  aligned_chunk_112.parquet  aligned_chunk_113.parquet  aligned_chunk_114.parquet  aligned_chunk_115.parquet  aligned_chunk_116.parquet  aligned_chunk_117.parquet  aligned_chunk_118.parquet  aligned_chunk_119.parquet  aligned_chunk_12.parquet  aligned_chunk_120.parquet  aligned_chunk_121.parquet  aligned_chunk_122.parquet  aligned_chunk_123.parquet  aligned_chunk_124.parquet  aligned_chunk_125.parquet  aligned_chunk_126.parquet  aligned_chunk_127.parquet  aligned_chunk_128.parquet  aligned_chunk_129.parquet  aligned_chunk_13.parquet  aligned_chunk_130.parquet  aligned_chunk_131.parquet  aligned_chunk_132.parquet  aligned_chunk_133.parquet  (+205 more)
jupyter/data_exploration/: create_metadata.ipynb  load_data.ipynb  plot_spectra.ipynb
src/spectroscopy_qml/: __init__.py
src/spectroscopy_qml/data/: __init__.py  dataset.py  loaders.py  preprocessing.py
src/spectroscopy_qml/models/: __init__.py  cnn_baseline.py
src/spectroscopy_qml/training/: __init__.py
tests/: test_smoke.py
