[project]
name = "spectroscopy-qml"
version = "0.1.0"
description = "Quantum-mechanical spectroscopy meets machine learning: exploring domain-specific architectures"
authors = [
    {name = "Michael", email = "michael@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["spectroscopy", "quantum-chemistry", "machine-learning", "nmr", "ir", "mass-spec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=15.0.0,<16.0.0",  # for Parquet
    "scikit-learn>=1.5.0,<2.0.0",
    "torch>=2.3.0,<3.0.0",
    "rdkit>=2024.3.1",  # for SMILES handling
    "matplotlib>=3.9.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "pydantic>=2.8.0,<3.0.0",  # for config validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.10.0,<2.0.0",
    "ruff>=0.5.0,<1.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "ipykernel>=6.29.0,<7.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.2.0,<5.0.0",
    "pandas-stubs>=2.2.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "benchmark", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "sklearn.*",
    "seaborn.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
